@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20145: `assertRaisesRegex` now raises a TypeError if the second
+  argument is not a string or compiled regex.
+
 - Issue #21058: Fix a leak of file descriptor in tempfile.NamedTemporaryFile(),
   close the file descriptor if os.fdopen() fails
 
